[package]
name = "xed-sys2"
version = "0.1.1"
edition = "2021"
links = "xed"
authors = ["Roee Shoshani"]
description = "bindings for xed"
repository = "https://github.com/roeeshoshani/xed-sys2"
license = "MIT"
keywords = ["xed", "intel", "x86", "x86_64"]
categories = ["encoding", "external-ffi-bindings", "hardware-support", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.69.1", features = ["experimental"] }
cc = "1.0.83"
